--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   /* margin-right: 267px; */
 }
 .header-content {
-  margin-top: 138px;
+  margin-top: 174px;
   /* margin-right: 161px; */
 }
 .header_heading {
@@ -241,14 +241,17 @@ body {
 .main-role {
   background: #ffffff;
   /* background: #b4ecb4; */
-  width: 100%;
-  height: 500px;
+  /* width: 100%; */
+  /* height: 500px; */
   display: flex;
   flex-direction: column;
 }
 
 .main-role-manage {
-  margin: 0 160px;
+  width: 1120px;
+  /* margin: 0 160px; */
+  margin: auto;
+
   /* background: #4c6b4c; */
 }
 .main-role-heading {
@@ -256,7 +259,8 @@ body {
   height: 64px;
   /* margin: auto; */
   align-self: center;
-  margin: 87px 0;
+  margin-top: 87px;
+  margin-bottom: 70px;
 }
 .main-role-manage-heading {
   width: 390px;
@@ -274,14 +278,224 @@ body {
   color: #fa6758;
 }
 .main-role-manage-container {
-  width: 100%;
+  width: 1120px;
   height: 538px;
   background: #f5f9fc;
   border-radius: 29px;
+  border: 0.1px solid transparent;
+  margin-bottom: 100px;
 }
-.main-role-manage-content {
-  width: 1120px;
-  height: 538px;
-  /* background: #557d9b; */
+.main-role-manage-own-content {
+  width: 1060px;
+  height: 478px;
+  /* background: #9bacb9; */
   margin: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.role-own {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: 323px;
+  height: 90px;
+  background: #ffffff;
+  border-radius: 13px;
+  margin-bottom: 20px;
+}
+
+.active_i {
+  background: #267c26;
+}
+.role-content {
+  width: 657px;
+  height: 56px;
+  /* background: #ffffff; */
+  margin-bottom: 35px;
+}
+.role-own_icon {
+  margin-left: 15px;
+  margin-right: 12px;
+  width: 60px;
+  height: 60px;
+
+  border-radius: 13px;
+  /* box-shadow: 0px 10px 40px rgb(54 61 136 / 6%); */
+  display: flex;
+}
+.role-own_icon img {
+  width: 28px;
+  height: 32px;
+  color: #ffffff;
+  margin: auto;
+}
+.name_heading {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #212831;
+}
+.role-content {
+  display: flex;
+}
+.role-content-icon {
+  margin-right: 10px;
+  margin-top: 2px;
+}
+.role_learn_more {
+  cursor: pointer;
+  width: 95px;
+  height: 28px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #267c26;
+  margin-top: -5px;
+  float: right;
+  border: none;
+  background: rgb(245, 249, 252);
+}
+
+/* main users statistics */
+.main-users-info-stat {
+  width: 1120px;
+  height: 230px;
+  background: #f5f9fc;
+  /* background: #5399ce; */
+  border-radius: 20px;
+  margin: auto;
+  display: flex;
+  margin-bottom: 100px;
+}
+.main-users-info {
+  width: 313px;
+  /* background: #7a7d80; */
+  margin: 64px;
+}
+
+.para_med {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #565961;
+}
+.main-users-info h1 {
+  margin-bottom: 4px;
+}
+.main-users-stat {
+  display: flex;
+  /* background: #888f94; */
+  width: 630px;
+  height: 100px;
+  border-left: 1px solid #267c26;
+  margin: 65px 0;
+}
+.institutes-stat-num-para {
+  margin-right: 157px;
+  margin-left: 60px;
+}
+
+.stat-margin {
+  margin-top: 3px;
+  margin-bottom: -6px;
+}
+.stat-margin h1 {
+  margin-bottom: 10px;
+}
+.users-stat-num {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+}
+.institutes-stat-num-para .users-stat-num {
+  color: #267c26;
+}
+.para_bb {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #565961;
+}
+.Students-stat-num-para .users-stat-num {
+  color: #fa6758;
+}
+.Countries-stat-num-para .users-stat-num {
+  color: #62b8f3;
+}
+
+.Countries-stat-num-para {
+  margin-left: 157px;
+  margin-right: 64px;
+}
+.Countries-stat-num-para .users-stat-num {
+  margin-left: 12px;
+}
+/* main trusted by */
+.main-trusted {
+  border: 1px solid transparent;
+  width: 100%;
+  height: 811px;
+  /* background-color: #cce6f7; */
+  background: linear-gradient(0deg, #ffffff 91.8%, #f5f9fc 100.87%);
+}
+.main-trusted-heading {
+  margin-top: 88px;
+  display: flex;
+  justify-content: center;
+}
+
+.main-trusted-para {
+  width: 852px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 70px;
+}
+.main-trusted-para .para_b {
+  text-align: center;
+}
+
+.main-trusted-links {
+  width: 1121.04px;
+  height: 55px;
+  /* background: #62b8f3; */
+  display: flex;
+  /* gap: 89px; */
+  gap: 88px;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 70px;
+}
+
+.main-trusted-ready {
+  justify-content: space-between;
+  display: flex;
+}
+.trusted-ready-heading-para p {
+  color: #212831;
+}
+
+.btn_l {
+  width: 210px;
+  height: 56px;
+  background: #267c26;
+  border-radius: 50px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #ffffff;
+  border: none;
+}
+.trusted-ready-btn {
+  margin-top: 87px;
+  margin-bottom: 87px;
+  margin-right: 68px;
 }
