--- a/style.css
+++ b/style.css
@@ -1,29 +1,59 @@
-* {
+*,
+*:before,
+*:after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
   font-family: "Roboto", sans-serif;
+  /* background: #f06d06; */
 }
-.header {
+/* .header-img {
+  width: 56.82%;
+  height: 665px;
+  position: relative;
+} */
+/* .header-img::after {
+  content: "";
+  position: absolute;
+
+  z-index: 58;
+  height: 665px;
+  width: 63.31%;
+  background: url(./images/header_img.svg);
+  background-size: 130%;
+} */
+
+.container {
   background-color: #ffffff;
+  /* width: 100%; */
   width: 100%;
+  /* margin: auto; */
   /* height: 804px; */
 }
 .navbar-container {
+  width: 100%;
+  /* position: fixed; */
+  background-color: #ffffff;
+  padding-top: 30px;
+}
+.navbar {
+  width: 1120px;
+  /* width: 77.778%; */
   display: flex;
-  margin-top: 30px;
   align-items: center;
-  justify-content: center;
+  margin: auto;
+  justify-content: space-between;
+  padding: 0 10px;
 }
 
-.logo {
-  margin-right: 295px;
-}
+/* .logo {
+  /* margin-right: 295px; */
+/* } */
 .log_img {
   width: 90px;
-  height: 74px;
+  height: 74.48px;
 }
 
 .nav {
@@ -43,17 +73,17 @@ body {
 }
 .nav_link li a {
   text-decoration: none;
-  font-family: "Roboto";
+
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.02em;
   color: #565961;
 }
 
 .nav-btn {
-  width: 80px;
-  height: 32px;
+  width: 100px;
+  height: 38px;
   background: #ffffff;
   border: 1px solid #267c26;
   border-radius: 31px;
@@ -67,67 +97,90 @@ body {
 
 /* nav end */
 .header-content-img {
+  width: 1120px;
   display: flex;
-  margin-left: 160px;
+  margin: auto;
+
   /* height: 804px; */
   /* margin-right: 160px; */
   /* margin-right: 267px; */
 }
 .header-content {
-  margin-top: 174px;
-  /* margin-right: 161px; */
+  /* margin-top: 174px; before change */
+  margin-top: 175.52px;
+  margin-right: 61px;
+  /* width: 541px; */
 }
-.header_heading {
+/* .header_heading {
   width: 449px;
-}
+} */
 .heading {
   font-weight: 700;
-  font-size: 54px;
-  line-height: 68px;
+  font-size: 70px;
+  line-height: 82px;
   color: #212831;
 }
 .header_para {
   width: 449px;
-  margin-top: 20px;
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
 .para_s {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 32px;
-  text-align: justify;
+  color: #565961;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 40px;
   color: #565961;
 }
-.header_btn {
-  margin-top: 40px;
-}
+
 .btn {
-  width: 170px;
-  height: 56px;
   background: #267c26;
-  border-radius: 50px;
-
   font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-
   letter-spacing: 0.05em;
-  text-transform: capitalize;
   color: #ffffff;
   border: none;
+  width: 190px;
+  height: 65px;
+  background: #267c26;
+  border-radius: 50px;
+  font-size: 22px;
+  line-height: 40px;
+  text-transform: capitalize;
 }
 
 .header-img {
-  /* width: 403px; */
-  height: 758px;
-  /* height: 400px; */
-  width: 100%;
-  background-image: url("./images/header_img.svg");
-  background-repeat: no-repeat;
+  width: 636.49px;
+  height: 665px;
+  /* margin-top: 45.52px; */
+  /* position: relative;
+  margin-top: 36px; */
 }
 .header_img {
-  width: 403px;
-  height: 664px;
+  height: 750px;
 }
+/* .header-img::after {
+  content: "";
+  position: absolute;
+  /* top: 100%; 
+  height: 665px;
+  width: 636.49px;
+  background: url(./images/header_background_img.svg);
+
+  background-position: center;
+
+  background-clip: content-box; 
+   background-size: 130%;
+} */
+
+/* .header-img { */
+/* height: 665px;
+  width: 636.49px; */
+/* background: center / contain no-repeat
+    url("./images/header_background_img.svg"); */
+/* background-repeat: no-repeat; */
+/* } */
+
 /* main start  */
 
 .main-why {
@@ -142,15 +195,15 @@ body {
   align-items: center;
   padding-top: 87px;
 }
-.main-why_heading {
+/* .main-why_heading {
   width: 350px;
   height: 64px;
-}
+} */
 .heading_s {
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 64px;
   color: #212831;
+  font-weight: 700;
+  font-size: 54px;
+  line-height: 68px;
 }
 .main-why_para {
   margin-top: 20px;
@@ -371,7 +424,7 @@ body {
   margin-bottom: 100px;
 }
 .main-users-info {
-  width: 313px;
+  /* width: 313px; */
   /* background: #7a7d80; */
   margin: 64px;
 }
@@ -498,4 +551,107 @@ body {
   margin-top: 87px;
   margin-bottom: 87px;
   margin-right: 68px;
+}
+
+/* footer */
+
+.footer {
+  width: 100%;
+  background: #267c26;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1120px;
+  width: 77.7%;
+  /* background: #6b252b; */
+  /* background: #f3968c; */
+  margin: auto;
+
+  padding-top: 60px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.16);
+  padding-bottom: 30px;
+  /* padding-bottom: 30px; */
+  /* margin: 0 160px; */
+}
+.footer-logo-content-socail {
+  /* background: #f3bfb9; */
+  width: 22.85%;
+  /* min-width: 216px; */
+}
+.socail {
+  min-width: 34px;
+  height: 34px;
+}
+
+/* .footer-logo {
+  width: 90px;
+  height: 74px;
+} */
+
+.footer-content {
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+.para_med {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #ffffff;
+}
+.footer-socail {
+  display: flex;
+  gap: 12px;
+}
+.socail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 34px;
+  height: 34px;
+  background: rgba(255, 255, 255, 0.16);
+  border-radius: 7px;
+}
+
+/* footer info  */
+.footer-info {
+  display: flex;
+  /* gap: 4rem; */
+  justify-content: space-between;
+  width: 68.57%;
+  /* background: #f0dfdd; */
+  /* padding-top: 30px; */
+  margin-top: 90px;
+}
+.footer-infos_ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer-infos_ul li {
+  list-style: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.footer-infos_heading {
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+}
+
+.footer-copyright {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+}
+.contact {
+  max-width: 216px;
 }
