--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
 body {
   font-family: "Roboto", sans-serif;
   /* background: #f06d06; */
@@ -25,7 +28,7 @@ body {
   background-size: 130%;
 } */
 
-.container {
+.header {
   background-color: #ffffff;
   /* width: 100%; */
   width: 100%;
@@ -39,13 +42,12 @@ body {
   padding-top: 30px;
 }
 .navbar {
-  width: 1120px;
-  /* width: 77.778%; */
+  width: 84%;
   display: flex;
   align-items: center;
   margin: auto;
   justify-content: space-between;
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 
 /* .logo {
@@ -63,17 +65,49 @@ body {
 .nav_lang {
   margin-right: 30px;
 }
-.nav_link ul {
+.nav-link ul {
   list-style: none;
   display: flex;
   align-items: center;
+  gap: 30px;
 }
-.nav_link li {
-  margin-right: 30px;
+.nav-select {
+  cursor: pointer;
+  display: flex;
+  gap: 2px;
 }
-.nav_link li a {
-  text-decoration: none;
 
+.nav-select-options {
+  flex-direction: column;
+  position: absolute;
+  /* bottom: 72px; */
+  gap: 10px !important;
+  width: 61px;
+  background: rgb(236, 235, 235);
+}
+.hide {
+  visibility: hidden;
+
+  /* display: none; */
+}
+.arrowUpDown {
+  transition: transform 0.3s;
+}
+.rotate {
+  transform: rotate(180deg);
+}
+.nav-select-options li {
+  width: 100%;
+  text-align: center;
+}
+.nav-select-options li:hover {
+  background-color: #fff;
+  transition: all 0.1s ease-in-out;
+  cursor: pointer;
+}
+
+.nav-link_item {
+  text-decoration: none;
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
@@ -95,9 +129,24 @@ body {
   color: #267c26;
 }
 
+/* hamburger */
+
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 27px;
+  height: 3px;
+  margin: 5px auto;
+  transition: all 0.3s ease-in-out;
+  background-color: #212831;
+}
+
 /* nav end */
 .header-content-img {
-  width: 1120px;
+  width: 84%;
   /* width: 77.78%; */
   display: flex;
   /* flex-direction: column; */
@@ -110,7 +159,7 @@ body {
 .header-content {
   /* margin-top: 174px; before change */
   margin-top: 176px;
-  margin-right: 42px;
+  /* margin-right: 42px; */
   flex: 1;
   /* background: #267c26; */
   /* width: 449px; */
@@ -156,15 +205,20 @@ body {
 
 .header-img {
   /* margin-top: 36px; */
-  width: 686.49px;
+  /* width: 686.49px; */
   height: 664px;
   /* background: #212831; */
+  /* background-image: url("images/header_background_img.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 764px; */
   flex: 1;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   /* width: 686.49px; */
   /* height: 665px; */
-  /* position: relative;
-  margin-top: 36px; */
+  /* /* position: relative; */
+  /* margin-top: 36px; */
 }
 .header_img {
   width: 100%;
@@ -324,7 +378,8 @@ body {
 
 .main-role {
   width: 84%;
-  margin: 6.5% 8%;
+  padding: 6.55% 0;
+  margin: auto;
   background: #ffffff;
   /* background: #b4ecb4; */
   /* width: 100%; */
@@ -347,7 +402,7 @@ body {
   height: 64px; */
   /* margin: auto; */
   /* align-self: center; */
-  margin-top: 87px;
+  /* margin-top: 87px; */
   margin-bottom: 70px;
 }
 .main-role-manage-heading {
@@ -555,18 +610,25 @@ body {
   margin-left: 12px;
 } */
 /* main trusted by */
-.main-trusted {
+.main-trusted-container {
   /* border: 1px solid transparent; */
   width: 100%;
-  padding: 6.5% 8%;
+  padding: 6.55% 0;
   /* height: 811px; */
-  background-color: #cce6f7;
-  /* background: linear-gradient(0deg, #ffffff 91.8%, #f5f9fc 100.87%); */
+  /* background-color: #cce6f7; */
+  background: linear-gradient(0deg, #ffffff 91.8%, #f5f9fc 100.87%);
+}
+.main-trusted {
+  width: 84%;
+  margin: auto;
 }
 /* .main-trusted-heading {
   
 } */
 
+.trusted-ready-heading-para h1 {
+  margin-bottom: 4px;
+}
 .main-trusted-para {
   width: 71%;
   margin: auto;
@@ -584,6 +646,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
+  flex-wrap: wrap;
   /* gap: 89px; */
   /* gap: 88px; */
 
@@ -631,8 +694,8 @@ body {
 .footer-container {
   display: flex;
   justify-content: space-between;
-  max-width: 1120px;
-  width: 77.7%;
+  /* max-width: 1120px; */
+  width: 84%;
   /* background: #6b252b; */
   /* background: #f3968c; */
   margin: auto;
@@ -645,13 +708,13 @@ body {
 }
 .footer-logo-content-socail {
   /* background: #f3bfb9; */
-  width: 22.85%;
-  /* min-width: 216px; */
+  width: 21%;
+  min-width: 175px;
 }
-.socail {
+/* .socail {
   min-width: 34px;
   height: 34px;
-}
+} */
 
 /* .footer-logo {
   width: 90px;
@@ -676,10 +739,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 34px;
-  height: 34px;
+  min-width: 34px;
+  min-height: 34px;
   background: rgba(255, 255, 255, 0.16);
   border-radius: 7px;
+}
+.socail_link {
+  max-height: 18px;
+  max-width: 18px;
 }
 
 /* footer info  */
@@ -720,7 +787,7 @@ body {
   justify-content: center;
   padding: 30px 0;
 }
-.contact {
+ul .contact {
   max-width: 216px;
 }
 
@@ -731,3 +798,67 @@ body {
     justify-content: space-between;
   }
 } */
+
+/* @media (max-width:1024px){
+  
+} */
+
+@media (max-width: 1023px) {
+  .nav-link ul li a {
+    font-size: 1.2rem;
+  }
+  .log_img {
+    width: 50px;
+    height: 41.11px;
+  }
+}
+
+@media (max-width: 767px) {
+  /* media query for menu open and close */
+  .nav-link ul {
+    padding: 16px;
+    position: absolute;
+    flex-direction: column;
+    top: 8rem;
+    transition: 0.3s;
+    left: -100%;
+    width: 100%;
+    /* color: white; */
+    background: #fff;
+  }
+  /* .nav-link ul li a {
+    color: #ffffff;
+  } */
+  .nav-link ul.active {
+    left: 0;
+  }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .nav-link ul li:last-child {
+    margin: 8px 0;
+  }
+
+  .nav-link_items li {
+    position: relative;
+  }
+
+  .nav-select-options {
+    position: absolute !important;
+    /* bottom: 72px; */
+    top: 25px !important;
+    z-index: 1;
+    left: 1px !important;
+    background: rgb(236, 235, 235) !important;
+  }
+}
